# Janitor_c--_Oblig3

./: A.txt  B.txt  C.txt  CMakeLists.txt  Input_rom-1.txt  Oblig3_janitors  file_reader.h  libs.h  main.cpp  room_parser.h
